--- a/playgrounds/sandbox/src/index.css
+++ b/playgrounds/sandbox/src/index.css
@@ -2,9 +2,13 @@ body {
   background-color: var(--color-bg-1);
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(var(--arcoblue-6));
 }
 
 .card-with-icon-hover .icon-hover {
